Delete leaderboard entry added.